Fixed animation issues for sects
angular sections + their dividers with borders bearing the real size of the element creating layout issues. I decided to put these dividers in a wrapper and set the height of the wrapper to the effective height of the actual dividers. Then, I changed the height of the angular-content elements retroactively to account for the heights of these dividers. I will move these dividers outside of angular-section's in the future.

--- a/css/overhaul.css
+++ b/css/overhaul.css
@@ -31,36 +31,32 @@ html, body, .section-list {
     height: 100%;
     margin: 0px;
     padding: 0px;
-    z-index 0;
 }
 /* Wrapper for all functions */
 .section-list {
     position: relative;
+    opacity: 0;
+    transition: all 0.4s ease-out;
+}
+.section-list.show {
+    opacity: 1;
+    transition: all 0.4s ease-in;
 }
 /* A section of a page with sharp angles dividing it from another angular section */
 .angular-section {
     width: 100%;
     height: 50%;
     padding-top: 5%;
-    position: relative;
-    float: left;
-    z-index: 2;
-/*
     transition: background-color 0.2s linear;
-    transition: z-index 0.1s cubic-bezier(1,0,1,0);
-*/
 }
 /* Main content for angular sections */
 .angular-content {
-    position: relative;
     height: 100%;
     width: 90%;
     padding-left: 5%;
     padding-right: 5%;
-    z-index: 3;
 }
 .angular-content .banner-title-img {
-    position: relative;
     width: 100%;
     height: 100%;
 }
@@ -70,30 +66,29 @@ html, body, .section-list {
     float: left;
 }
 .angular-divider {
-    position: relative;
-    float: left;
     width: 100%;
     height: 0.5em;
-    z-index: 4;
 /*    transition: all 0.2s linear;*/
 }
-/* Move hovered section to background to avoid overlapping angular dividers */
-.angular-section:hover {
-    z-index: 1;
+.ang-div-wrapper {
+    width: 100%;
 }
 #jmusic:hover {
     background-color: var(--soundcloud-orange);
     transition: all 0.2s linear;
 }
+/*
 #jmusic:hover .angular-divider {
     border-top-color: var(--soundcloud-orange) !important;
     transition: all 0.2s linear;    
 }
+*/
 .angular-section:hover {
     background-color: var(--sharp-yellow);
     transition: background-color 0.2s linear;
 }
+/*
 .angular-section:hover .angular-divider {
     border-top-color: var(--sharp-yellow) !important;
     transition: all 0.2s linear;
-}
+}*/
